ingress/services_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              name: http
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              name: http
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              name: http
